# advent-of-code-2025

./: .env.template  .gitignore  Cargo.toml  new_day.sh
create_new_day/: Cargo.toml
create_new_day/src/: main.rs
day_01/: Cargo.toml  test.txt
day_01/src/: lib.rs  main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: main.rs
day_04/: Cargo.toml
day_04/src/: main.rs
day_05/: Cargo.toml  test.txt
day_05/src/: main.rs
day_06/: Cargo.toml
day_06/src/: main.rs
day_07/: Cargo.toml
day_07/src/: main.rs
day_08/: Cargo.toml
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_10/: Cargo.toml  test.txt
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
template/: Cargo.toml
template/src/: main.rs
xmas/: Cargo.toml
xmas/src/: direction.rs  direction3d.rs  keyed_ord.rs  lib.rs  map2d.rs  num.rs  point2d.rs  point3d.rs  result.rs
