[package]
name = "create_new_day"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-print = "0.3.6"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
